--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bytes = "1.10.1"
+thiserror = "2.0.15"
 tokio = { version = "1.47.1", features = ["full"] }
