--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,16 @@ name = "attodb"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "attodb-server"
+path = "src/bin/server.rs"
+
+[[bin]]
+name = "attodb-cli"
+path = "src/bin/cli.rs"
+
 [dependencies]
 bytes = "1.10.1"
+clap = { version = "4.5.45", features = ["derive"] }
 thiserror = "2.0.15"
 tokio = { version = "1.47.1", features = ["full"] }
