--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ path = "src/bin/cli.rs"
 [dependencies]
 bytes = "1.10.1"
 clap = { version = "4.5.45", features = ["derive"] }
+dashmap = "6.1.0"
 thiserror = "2.0.15"
 tokio = { version = "1.47.1", features = ["full"] }
